@@ -41,6 +41,12 @@ Wed Feb 14 16:03:25 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>
 	  global ID list for the channel as it might not be in the local
 	  list.  Fixed a bug related to LEAVE command.
 
+	* Is this the end of the [<unknown>] buglet that has been lurking
+	  around for a long time?  A little for loop fix in server's
+	  silc_server_command_whois_parse that is used by both IDENTIFY
+	  and WHOIS command.  At least, this was a clear bug and a cause
+	  of one type of [<unknown>] buglet.
+
 Tue Feb 13 19:55:59 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>
 
 	* Added --with-gmp configuration option.  If set the GMP
